Style 3 main columns, style game-grid div

--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
   </head>
   <body>
     <main>
-
       <section id='section-left'>
         <div class="div-player-score">
           <img src="" alt="Player1 symbol">
@@ -20,16 +19,16 @@
       <section id='section-middle'>
           <h1>It's <img src="" alt="current player symbol"> turn</h1>
           <div id="game-board">
-            <img id ='TL' src="" alt="Top Left Symbol"/>
-            <img id ='TC' src="" alt="Top Center Symbol"/>
-            <img id ='TR' src="" alt="Top Right Symbol"/>
-            <img id ='ML' src="" alt="Middle Left Symbol"/>
-            <img id ='MM' src="" alt="Middle Center Symbol"/>
-            <img id ='MR' src="" alt="Middle Right Symbol"/>
-            <img id ='BL' src="" alt="Bottom Left Symbol"/>
-            <img id ='BM' src="" alt="Bottom Middle Symbol"/>
-            <img id ='BR' src="" alt="Bottom Right Symbol"/>
-            <img id = 'TTT-Grid' src="" alt="Game-Grid">
+            <img class='top left' id ='tl' src="" alt="Top Left Symbol"/>
+            <img class='top center' id ='tc' src="" alt="Top Center Symbol"/>
+            <img class='top right' id ='tr' src="" alt="Top Right Symbol"/>
+            <img class='middle left' id ='ml' src="" alt="Middle Left Symbol"/>
+            <img class='middle center' id ='mm' src="" alt="Middle Center Symbol"/>
+            <img class='middle right' id ='mr' src="" alt="Middle Right Symbol"/>
+            <img class='bottom left' id ='bl' src="" alt="Bottom Left Symbol"/>
+            <img class='bottom center' id ='bm' src="" alt="Bottom Center Symbol"/>
+            <img class='bottom right' id ='br' src="" alt="Bottom Right Symbol"/>
+            <img id = 'ttt-grid' src="" alt="Game-Grid">
           </div>
       </section>
 
