Pick JS vs RBY theme. Add Icons, tweak game-grid div

--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
       <section id='section-middle'>
           <h1>It's <img src="" alt="current player symbol"> turn</h1>
           <div id="game-board">
-            <img class='top left' id ='tl' src="" alt="Top Left Symbol"/>
-            <img class='top center' id ='tc' src="" alt="Top Center Symbol"/>
-            <img class='top right' id ='tr' src="" alt="Top Right Symbol"/>
-            <img class='middle left' id ='ml' src="" alt="Middle Left Symbol"/>
-            <img class='middle center' id ='mm' src="" alt="Middle Center Symbol"/>
-            <img class='middle right' id ='mr' src="" alt="Middle Right Symbol"/>
-            <img class='bottom left' id ='bl' src="" alt="Bottom Left Symbol"/>
-            <img class='bottom center' id ='bm' src="" alt="Bottom Center Symbol"/>
-            <img class='bottom right' id ='br' src="" alt="Bottom Right Symbol"/>
+            <img class='top left symbol' id ='tl' src="./assets/ruby.png" alt="Top Left Symbol"/>
+            <img class='top center symbol' id ='tc' src="" alt="Top Center Symbol"/>
+            <img class='top right symbol' id ='tr' src="./assets/js-icon.png" alt="Top Right Symbol"/>
+            <img class='middle left symbol' id ='ml' src="" alt="Middle Left Symbol"/>
+            <img class='middle center symbol' id ='mm' src="" alt="Middle Center Symbol"/>
+            <img class='middle right symbol' id ='mr' src="" alt="Middle Right Symbol"/>
+            <img class='bottom left symbol' id ='bl' src="" alt="Bottom Left Symbol"/>
+            <img class='bottom center symbol' id ='bm' src="" alt="Bottom Center Symbol"/>
+            <img class='bottom right symbol' id ='br' src="" alt="Bottom Right Symbol"/>
             <img id = 'ttt-grid' src="" alt="Game-Grid">
           </div>
       </section>
