Add bg images and fonts. Style left, right, middle with fun fonts, bgs, shadows, and overlays

--- a/index.html
+++ b/index.html
@@ -11,17 +11,17 @@
     <main>
       <section id='section-left'>
         <div class="div-player-score">
-          <img src="" alt="Player1 symbol">
-          <h2>Player1 Wins</h2>
+          <img src="./assets/ruby.png" alt="Player 1 symbol">
+          <h2>RUBY player Wins</h2>
         </div>
       </section>
 
       <section id='section-middle'>
-          <h1>It's <img src="" alt="current player symbol"> turn</h1>
+          <h1><img src="./assets/ruby.png" alt="current player symbol">'s turn</h1>
           <div id="game-board">
             <img class='top left symbol' id ='tl' src="./assets/ruby.png" alt="Top Left Symbol"/>
             <img class='top center symbol' id ='tc' src="" alt="Top Center Symbol"/>
-            <img class='top right symbol' id ='tr' src="./assets/js-icon.png" alt="Top Right Symbol"/>
+            <img class='top right symbol' id ='tr' src="./assets/js-icon.webp" alt="Top Right Symbol"/>
             <img class='middle left symbol' id ='ml' src="" alt="Middle Left Symbol"/>
             <img class='middle center symbol' id ='mm' src="" alt="Middle Center Symbol"/>
             <img class='middle right symbol' id ='mr' src="" alt="Middle Right Symbol"/>
@@ -34,8 +34,8 @@
 
       <section id='section-right'>
         <div class="div-player-score">
-          <img src="" alt="Player2 symbol">
-          <h2>Player2 Wins</h2>
+          <img src="./assets/js-icon.webp" alt="Player2 symbol">
+          <h2> JS Player Wins</h2>
         </div>
       </section>
 
