--- a/index.html
+++ b/index.html
@@ -19,16 +19,16 @@
       <section id='section-middle'>
           <h1><img src="./assets/ruby.png" alt="current player symbol">'s turn</h1>
           <div id="game-board">
-            <img class='top left symbol' id ='tl' src="./assets/ruby.png" alt="Top Left Symbol"/>
-            <img class='top center symbol' id ='tc' src="" alt="Top Center Symbol"/>
-            <img class='top right symbol' id ='tr' src="./assets/js-icon.webp" alt="Top Right Symbol"/>
+            <img class='top left symbol ruby' id ='tl' src="./assets/ruby.png" alt="Top Left Symbol"/>
+            <img class='top center symbol empty' id ='tc' src="./assets/empty.png" alt="Top Center Symbol"/>
+            <img class='top right symbol js' id ='tr' src="./assets/js-icon.webp" alt="Top Right Symbol"/>
             <img class='middle left symbol' id ='ml' src="" alt="Middle Left Symbol"/>
             <img class='middle center symbol' id ='mm' src="" alt="Middle Center Symbol"/>
             <img class='middle right symbol' id ='mr' src="" alt="Middle Right Symbol"/>
             <img class='bottom left symbol' id ='bl' src="" alt="Bottom Left Symbol"/>
             <img class='bottom center symbol' id ='bm' src="" alt="Bottom Center Symbol"/>
             <img class='bottom right symbol' id ='br' src="" alt="Bottom Right Symbol"/>
-            <img id = 'ttt-grid' src="" alt="Game-Grid">
+            <img id = 'ttt-grid' src="./assets/ttt-grid.png" alt="Game-Grid"/>
           </div>
       </section>
 
