Add click event that reports clicked tile. Add z-indexes to facilitate.

--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
       <section id='section-middle'>
           <h1><img src="./assets/ruby.png" alt="current player symbol">'s turn</h1>
           <div id="game-board">
-            <img class='top left symbol ruby' id ='tl' src="./assets/ruby.png" alt="Top Left Symbol"/>
-            <img class='top center symbol empty' id ='tc' src="./assets/empty.png" alt="Top Center Symbol"/>
-            <img class='top right symbol js' id ='tr' src="./assets/js-icon.webp" alt="Top Right Symbol"/>
-            <img class='middle left symbol' id ='ml' src="" alt="Middle Left Symbol"/>
-            <img class='middle center symbol' id ='mm' src="" alt="Middle Center Symbol"/>
-            <img class='middle right symbol' id ='mr' src="" alt="Middle Right Symbol"/>
-            <img class='bottom left symbol' id ='bl' src="" alt="Bottom Left Symbol"/>
-            <img class='bottom center symbol' id ='bm' src="" alt="Bottom Center Symbol"/>
-            <img class='bottom right symbol' id ='br' src="" alt="Bottom Right Symbol"/>
+            <img class='top left tile ruby' id ='tl' src="./assets/ruby.png" alt="Top Left tile"/>
+            <img class='top center tile empty' id ='tc' src="./assets/empty.png" alt="Top Center tile"/>
+            <img class='top right tile js' id ='tr' src="./assets/js-icon.webp" alt="Top Right tile"/>
+            <img class='middle left tile' id ='ml' src="" alt="Middle Left tile"/>
+            <img class='middle center tile' id ='mm' src="" alt="Middle Center tile"/>
+            <img class='middle right tile' id ='mr' src="" alt="Middle Right tile"/>
+            <img class='bottom left tile' id ='bl' src="" alt="Bottom Left tile"/>
+            <img class='bottom center tile' id ='bm' src="" alt="Bottom Center tile"/>
+            <img class='bottom right tile' id ='br' src="" alt="Bottom Right tile"/>
             <img id = 'ttt-grid' src="./assets/ttt-grid.png" alt="Game-Grid"/>
           </div>
       </section>
