Add board to Game class. Clicks now claim the corresponding tile in the game.board

--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
             <img class='top center tile empty' id ='tc' src="./assets/empty.png" alt="Top Center tile"/>
             <img class='top right tile js' id ='tr' src="./assets/js-icon.webp" alt="Top Right tile"/>
             <img class='middle left tile' id ='ml' src="" alt="Middle Left tile"/>
-            <img class='middle center tile' id ='mm' src="" alt="Middle Center tile"/>
+            <img class='middle center tile' id ='mc' src="" alt="Middle Center tile"/>
             <img class='middle right tile' id ='mr' src="" alt="Middle Right tile"/>
             <img class='bottom left tile' id ='bl' src="" alt="Bottom Left tile"/>
-            <img class='bottom center tile' id ='bm' src="" alt="Bottom Center tile"/>
+            <img class='bottom center tile' id ='bc' src="" alt="Bottom Center tile"/>
             <img class='bottom right tile' id ='br' src="" alt="Bottom Right tile"/>
             <img id = 'ttt-grid' src="./assets/ttt-grid.png" alt="Game-Grid"/>
           </div>
