Game board starts with empty tiles

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
       <section id='section-middle'>
           <h1><img src="./assets/ruby.png" alt="current player symbol">'s turn</h1>
           <div id="game-board">
-            <img class='top left tile ruby' id ='tl' src="./assets/ruby.png" alt="Top Left tile"/>
-            <img class='top center tile empty' id ='tc' src="./assets/empty.png" alt="Top Center tile"/>
-            <img class='top right tile js' id ='tr' src="./assets/js-icon.webp" alt="Top Right tile"/>
+            <img class='top left tile' id ='tl' src="" alt="Top Left tile"/>
+            <img class='top center tile' id ='tc' src="" alt="Top Center tile"/>
+            <img class='top right tile' id ='tr' src="" alt="Top Right tile"/>
             <img class='middle left tile' id ='ml' src="" alt="Middle Left tile"/>
             <img class='middle center tile' id ='mc' src="" alt="Middle Center tile"/>
             <img class='middle right tile' id ='mr' src="" alt="Middle Right tile"/>
