Fix grid sizing when empty

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
             <img class='top right tile' id ='tr' src="" alt="Top Right tile"/>
             <img class='middle left tile' id ='ml' src="" alt="Middle Left tile"/>
             <img class='middle center tile' id ='mc' src="" alt="Middle Center tile"/>
+            <img class='middle center invisible' src='./assets/ruby.png'>
             <img class='middle right tile' id ='mr' src="" alt="Middle Right tile"/>
             <img class='bottom left tile' id ='bl' src="" alt="Bottom Left tile"/>
             <img class='bottom center tile' id ='bc' src="" alt="Bottom Center tile"/>
