--- a/index.html
+++ b/index.html
@@ -19,12 +19,14 @@
       <section id='section-middle'>
           <h1><img src="./assets/ruby.png" alt="current player symbol">'s turn</h1>
           <div id="game-board">
+            <img class='invisible' src="./assets/kablam.png" alt="kablam!">
+            <img class='overlay hidden' src=''>
             <img class='top left tile' id ='tl' src="" alt="Top Left tile"/>
             <img class='top center tile' id ='tc' src="" alt="Top Center tile"/>
             <img class='top right tile' id ='tr' src="" alt="Top Right tile"/>
             <img class='middle left tile' id ='ml' src="" alt="Middle Left tile"/>
             <img class='middle center tile' id ='mc' src="" alt="Middle Center tile"/>
-            <img class='middle center invisible' src='./assets/ruby.png'>
+            <img class='middle center invisible-placeholder' src='./assets/ruby.png'>
             <img class='middle right tile' id ='mr' src="" alt="Middle Right tile"/>
             <img class='bottom left tile' id ='bl' src="" alt="Bottom Left tile"/>
             <img class='bottom center tile' id ='bc' src="" alt="Bottom Center tile"/>
