adjust the end-game animations. Size the middle section better at small heights

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
       <section id='section-middle'>
           <h1 class='fight-font'><img src="./assets/ruby.png" alt="current player symbol">'s turn</h1>
           <div id="game-board">
-            <img class='invisible' id='kablam' src="./assets/kablam.png" alt="kablam!">
-            <h4 class='invisible fight-font' id='exclaim-win'></h4>
+            <img class='invisible kablam' id='kablam' src="./assets/kablam.png" alt="kablam!">
+            <h4 class='invisible fight-font exclaim' id='exclaim-win'></h4>
             <img class='overlay hidden' src=''>
             <img class='top left tile' id ='tl' src="" alt="Top Left tile"/>
             <img class='top center tile' id ='tc' src="" alt="Top Center tile"/>
