Add a forfeit button and matching function. If there is an active game when leaving page, forfeits

--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@
             <img class='bottom right tile' id ='br' src="" alt="Bottom Right tile"/>
             <img id = 'ttt-grid' src="./assets/ttt-grid.png" alt="Game-Grid"/>
           </div>
+          <div class="clear-buttons">
+            <button class='fight-font cb clear'>clear</button>
+            <button class='fight-font cb forfeit'>forfeit</button>
+          </div>
       </section>
 
       <section class='js-font' id='section-right'>
