Make clear Scores function and implement on button. Effects Local Storage.

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <img id = 'ttt-grid' src="./assets/ttt-grid.png" alt="Game-Grid"/>
           </div>
           <div class="clear-buttons">
-            <button class='fight-font cb clear'>clear</button>
+            <button class='fight-font cb clear'>clear scores</button>
             <button class='fight-font cb forfeit'>forfeit</button>
           </div>
       </section>
