Add change player input form

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+change-player-button<!DOCTYPE html>
 <html>
   <head>
     <meta charset="UTF-8">
@@ -14,7 +14,11 @@
           <img src="./assets/ruby.png" alt="Player 1 symbol">
           <h2>RUBY player</h2>
         </div>
-        <button class='fight-font ruby-font medium-font-size button change-profile'>Change</button>
+        <button class='fight-font ruby-font medium-font-size button change-player-button hidden'>Change</button>
+        <div class="change-player-input">
+          <button class='fight-font ruby-font medium-font-size button change-profile'>back!</button>
+          <input class='fight-font' placeholder="Enter Name">
+        </div>
       </section>
 
       <section id='section-middle'>
@@ -46,7 +50,11 @@
           <img src="./assets/js-icon.webp" alt="Player2 symbol">
           <h2> JS Player</h2>
         </div>
-        <button class='fight-font js-font medium-font-size button change-profile'>Change</button>
+        <button class='fight-font js-font medium-font-size button change-profile hidden'>Change</button>
+        <div class="change-player-input">
+          <button class='fight-font js-font medium-font-size button change-profile'>back!</button>
+          <input class='fight-font' placeholder="Enter Name">
+        </div>
       </section>
 
     </main>
