Made player name forms toggle-able

--- a/index.html
+++ b/index.html
@@ -14,11 +14,8 @@ change-player-button<!DOCTYPE html>
           <img src="./assets/ruby.png" alt="Player 1 symbol">
           <h2>RUBY player</h2>
         </div>
-        <button class='fight-font ruby-font medium-font-size button change-player-button hidden'>Change</button>
-        <div class="change-player-input">
-          <button class='fight-font ruby-font medium-font-size button change-profile'>back!</button>
-          <input class='fight-font' placeholder="Enter Name">
-        </div>
+        <button class='fight-font ruby-font medium-font-size button change-player-button'>Change</button>
+        <input class='fight-font hidden' placeholder="Enter Name">
       </section>
 
       <section id='section-middle'>
@@ -50,11 +47,8 @@ change-player-button<!DOCTYPE html>
           <img src="./assets/js-icon.webp" alt="Player2 symbol">
           <h2> JS Player</h2>
         </div>
-        <button class='fight-font js-font medium-font-size button change-profile hidden'>Change</button>
-        <div class="change-player-input">
-          <button class='fight-font js-font medium-font-size button change-profile'>back!</button>
-          <input class='fight-font' placeholder="Enter Name">
-        </div>
+        <button class='fight-font js-font medium-font-size button change-profile'>Change</button>
+        <input class='fight-font hidden' placeholder="Enter Name">
       </section>
 
     </main>
