When enter is hit inside the name inputs, it will print out the current value

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@ change-player-button<!DOCTYPE html>
           <img src="./assets/ruby.png" alt="Player 1 symbol">
           <h2>RUBY player</h2>
         </div>
-        <button class='fight-font ruby-font medium-font-size button change-player-button'>Change</button>
-        <input class='fight-font hidden' placeholder="Enter Name">
+        <button class='fight-font ruby-font medium-font-size button change-player-button' data-side='left'>Change</button>
+        <input class ='fight-font hidden' placeholder="Enter Name" data-side='left'>
       </section>
 
       <section id='section-middle'>
@@ -47,8 +47,8 @@ change-player-button<!DOCTYPE html>
           <img src="./assets/js-icon.webp" alt="Player2 symbol">
           <h2> JS Player</h2>
         </div>
-        <button class='fight-font js-font medium-font-size button change-profile'>Change</button>
-        <input class='fight-font hidden' placeholder="Enter Name">
+        <button class='fight-font js-font medium-font-size button change-profile' data-side='right'>Change</button>
+        <input class='fight-font hidden' placeholder="Enter Name" data-side='right'>
       </section>
 
     </main>
