When a user clicks the anonymous button, it reverts their name to the default ID

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </div>
         <button class='fight-font ruby-font medium-font-size button change-player-button' data-side='left'>Change</button>
         <input class ='fight-font hidden if-game-dont-show' placeholder="Enter Name" data-side='left'>
-        <button class='fight-font ruby-font medium-font-size button anonymous if-game-dont-show hidden' data-side='right'>anonymous</button>
+        <button class='fight-font ruby-font medium-font-size button anonymous if-game-dont-show hidden' data-side='left'>anonymous</button>
       </section>
 
       <section id='section-middle'>
