Add input error message reporting and animation

--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
           <h2>RUBY player</h2>
         </div>
         <button class='fight-font ruby-font medium-font-size button change-player-button' data-side='left'>Change</button>
-        <input class ='fight-font hidden if-game-dont-show' placeholder="Enter Name" data-side='left'>
+        <input class ='input fight-font hidden if-game-dont-show' placeholder="Enter Name" data-side='left'>
         <button class='fight-font ruby-font medium-font-size button anonymous if-game-dont-show hidden' data-side='left'>anonymous</button>
+        <h4 class='invisible input' data-side='left'></h4>
       </section>
 
       <section id='section-middle'>
@@ -49,8 +50,9 @@
           <h2> JS Player</h2>
         </div>
         <button class='fight-font js-font medium-font-size button' data-side='right'>Change</button>
-        <input class='fight-font if-game-dont-show hidden' placeholder="Enter Name" data-side='right'>
+        <input class='fight-font if-game-dont-show input hidden' placeholder="Enter Name" data-side='right'>
         <button class='fight-font js-font medium-font-size button hidden if-game-dont-show anonymous' data-side='right'>anonymous</button>
+        <h4 class='invisible input' data-side='left'>TOO LONG</h4>
       </section>
 
     </main>
