Add AI UI buttons

--- a/index.html
+++ b/index.html
@@ -15,8 +15,14 @@
           <h2>RUBY player</h2>
         </div>
         <button class='fight-font ruby-font medium-font-size button change-player-button' data-side='left'>Change</button>
-        <input class ='input fight-font hidden if-game-dont-show' placeholder="Enter Name" data-side='left'>
+        <div class="AI fight-font ruby-font medium-font-size if-game-dont-show">
+          <h2> AI</h2>
+          <button>EZ</button>
+          <button>MED</button>
+          <button>HARD</button>
+        </div>
         <button class='fight-font ruby-font medium-font-size button anonymous if-game-dont-show hidden' data-side='left'>anonymous</button>
+        <input class ='input fight-font hidden if-game-dont-show' placeholder="Enter Name" data-side='left'>
         <h4 class='invisible input' data-side='left'></h4>
       </section>
 
@@ -50,8 +56,14 @@
           <h2> JS Player</h2>
         </div>
         <button class='fight-font js-font medium-font-size button' data-side='right'>Change</button>
-        <input class='fight-font if-game-dont-show input hidden' placeholder="Enter Name" data-side='right'>
+        <div class="AI fight-font js-font medium-font-size if-game-dont-show">
+          <h2> AI</h2>
+          <button>EZ</button>
+          <button>MED</button>
+          <button>HARD</button>
+        </div>
         <button class='fight-font js-font medium-font-size button hidden if-game-dont-show anonymous' data-side='right'>anonymous</button>
+        <input class='fight-font if-game-dont-show input hidden' placeholder="Enter Name" data-side='right'>
         <h4 class='invisible input' data-side='left'>TOO LONG</h4>
       </section>
 
