--- a/index.html
+++ b/index.html
@@ -9,21 +9,21 @@
   </head>
   <body>
     <main>
-      <section class='ruby-font' id='section-left'>
+      <section class='ruby-font' id='section-left' data-side='left'>
         <div class="div-player-score">
           <img src="./assets/ruby.png" alt="Player 1 symbol">
           <h2>RUBY player</h2>
         </div>
-        <button class='fight-font ruby-font medium-font-size button change-player-button' data-side='left'>Change</button>
+        <button class='fight-font ruby-font medium-font-size button change-player-button' >Change</button>
         <div class="AI fight-font ruby-font medium-font-size if-game-dont-show">
           <h2> AI</h2>
-          <button>EZ</button>
-          <button>MED</button>
-          <button>HARD</button>
+          <button data-ai='ez'>EZ</button>
+          <button data-ai='med'>MED</button>
+          <button data-ai='hard'>HARD</button>
         </div>
-        <button class='fight-font ruby-font medium-font-size button anonymous if-game-dont-show hidden' data-side='left'>anonymous</button>
-        <input class ='input fight-font hidden if-game-dont-show' placeholder="Enter Name" data-side='left'>
-        <h4 class='invisible input' data-side='left'></h4>
+        <button class='fight-font ruby-font medium-font-size button anonymous if-game-dont-show hidden'>anonymous</button>
+        <input class ='input fight-font hidden if-game-dont-show' placeholder="Enter Name">
+        <h4 class='invisible input'></h4>
       </section>
 
       <section id='section-middle'>
@@ -50,21 +50,21 @@
           </div>
       </section>
 
-      <section class='js-font' id='section-right'>
+      <section class='js-font' id='section-right' data-side='right'>
         <div class="div-player-score">
           <img src="./assets/js-icon.webp" alt="Player2 symbol">
           <h2> JS Player</h2>
         </div>
-        <button class='fight-font js-font medium-font-size button' data-side='right'>Change</button>
+        <button class='fight-font js-font medium-font-size button'>Change</button>
         <div class="AI fight-font js-font medium-font-size if-game-dont-show">
           <h2> AI</h2>
-          <button>EZ</button>
-          <button>MED</button>
-          <button>HARD</button>
+          <button data-ai='ez'>EZ</button>
+          <button data-ai='med'>MED</button>
+          <button data-ai='hard'>HARD</button>
         </div>
-        <button class='fight-font js-font medium-font-size button hidden if-game-dont-show anonymous' data-side='right'>anonymous</button>
-        <input class='fight-font if-game-dont-show input hidden' placeholder="Enter Name" data-side='right'>
-        <h4 class='invisible input' data-side='left'>TOO LONG</h4>
+        <button class='fight-font js-font medium-font-size button hidden if-game-dont-show anonymous'>anonymous</button>
+        <input class='fight-font if-game-dont-show input hidden' placeholder="Enter Name" >
+        <h4 class='invisible input'>TOO LONG</h4>
       </section>
 
     </main>
