Implement toggling autorun for AI

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <button class='fight-font ruby-font medium-font-size button anonymous if-game-dont-show hidden'>anonymous</button>
         <input class ='input fight-font hidden if-game-dont-show' placeholder="Enter Name">
         <h4 class='invisible input'></h4>
+        <button class='fight-font ruby-font medium-font-size button stop hidden'>manual</button>
       </section>
 
       <section id='section-middle'>
@@ -65,6 +66,7 @@
         <button class='fight-font js-font medium-font-size button hidden if-game-dont-show anonymous'>anonymous</button>
         <input class='fight-font if-game-dont-show input hidden' placeholder="Enter Name" >
         <h4 class='invisible input'>TOO LONG</h4>
+        <button class='fight-font js-font medium-font-size button stop hidden' >manual</button>
       </section>
 
     </main>
