Add step button that displays when autoRun = false

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         <input class ='input fight-font hidden if-game-dont-show' placeholder="Enter Name">
         <h4 class='invisible input'></h4>
         <button class='fight-font ruby-font medium-font-size button stop hidden'>manual</button>
+        <button class='fight-font ruby-font medium-font-size button step hidden'>take turn</button>
       </section>
 
       <section id='section-middle'>
@@ -67,6 +68,7 @@
         <input class='fight-font if-game-dont-show input hidden' placeholder="Enter Name" >
         <h4 class='invisible input'>TOO LONG</h4>
         <button class='fight-font js-font medium-font-size button stop hidden' >manual</button>
+        <button class='fight-font js-font medium-font-size button step hidden'>take turn</button>
       </section>
 
     </main>
