Bug Fix storage update was broken after mentor fix

--- a/index.html
+++ b/index.html
@@ -22,7 +22,10 @@
           <button data-ai='hard'>HARD</button>
         </div>
         <button class='fight-font ruby-font medium-font-size button anonymous if-game-dont-show hidden'>anonymous</button>
-        <input class ='input fight-font hidden if-game-dont-show' placeholder="Enter Name">
+        <div class="input-flex hidden if-game-dont-show">
+          <input class ='input fight-font' placeholder="Enter Name">
+          <button class="input fight-font ruby-font">√</button>
+        </div>
         <h4 class='invisible input'></h4>
         <button class='fight-font ruby-font medium-font-size button stop hidden'>manual</button>
         <button class='fight-font ruby-font medium-font-size button step hidden'>take turn</button>
@@ -65,7 +68,10 @@
           <button data-ai='hard'>HARD</button>
         </div>
         <button class='fight-font js-font medium-font-size button hidden if-game-dont-show anonymous'>anonymous</button>
-        <input class='fight-font if-game-dont-show input hidden' placeholder="Enter Name" >
+        <div class="input-flex hidden if-game-dont-show">
+          <input class ='input fight-font' placeholder="Enter Name">
+          <button class="input fight-font js-font">√</button>
+        </div>
         <h4 class='invisible input'>TOO LONG</h4>
         <button class='fight-font js-font medium-font-size button stop hidden' >manual</button>
         <button class='fight-font js-font medium-font-size button step hidden'>take turn</button>
