Mentor Review Push. Small stylistic updates

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </div>
         <h4 class='invisible input'></h4>
         <button class='fight-font ruby-font medium-font-size button stop hidden'>manual</button>
-        <button class='fight-font ruby-font medium-font-size button step hidden'>take turn</button>
+        <button class='fight-font ruby-font medium-font-size button step hidden'>a.i. go!</button>
       </section>
 
       <section id='section-middle'>
@@ -74,9 +74,8 @@
         </div>
         <h4 class='invisible input'>TOO LONG</h4>
         <button class='fight-font js-font medium-font-size button stop hidden' >manual</button>
-        <button class='fight-font js-font medium-font-size button step hidden'>take turn</button>
+        <button class='fight-font js-font medium-font-size button step hidden'>a.i. go!</button>
       </section>
-
     </main>
   </body>
   <script src="./src/player.js"></script>
